...
    <string name="choose_record">Choose Record</string>
    <string name="choose_type">Choose Type</string>
    <string name="clear">Clear</string>
    <string name="clear_all_saved_passwords">Clear all saved passwords</string>
    <string name="clear_clipboard_on_close">Clear clipboard on close</string>
    <string name="clear_password_notifications">Clear password notifications</string>
    <string name="clear_recent">Clear Recent</string>
    <string name="close_file_screen_off">Close file on screen off</string>
    <string name="confirm">Confirm</string>
    <string name="cannot_delete_record">Cannot delete record - %1$s</string>
    <string name="content_file">Content File</string>
    <string name="copy_authentication_code">Copy Authentication Code</string>
    <string name="copy_email">Copy Email</string>
...
        is required.\n
        - Once the key is found and activated, it will be used to authenticate
        with your password.  The file will open automatically.
    </string>
    <string name="file_operations">File Operations…</string>
    <string name="file_password_encoding">File password encoding</string>
    <string name="files">Files</string>
    <string name="find_similar">Find Similar</string>
    <string name="generate">Generate</string>
    <string name="generate_password">Generate Password</string>
    <string name="go">Go</string>
    <string name="go_to_shortcut">Goto</string>
    <string name="group">Group</string>
...
    <string name="hidden_password_normal">***** (tap to show)</string>
    <string name="hidden_password_shortcut">***** (from shortcut, tap to show)</string>
    <string name="hide_password">Hide Password</string>
    <string name="hide_passwords">Hide Passwords</string>
    <string name="history">History</string>
    <string name="history_header">HISTORY</string>
    <string name="home">Home</string>
    <string name="interval">Interval</string>
    <string name="invalid_file_name">Invalid file name</string>
    <string name="invalid_history_max_size" tools:ignore="PluralsCandidate">Size must be between %1$d and %2$d</string>
    <string name="invalid_length">Invalid length</string>
    <string name="invalid_option_length">Invalid option length</string>
    <string name="invalid_password">Invalid password</string>
...
        be moved to the internal storage.
    </string>
    <string name="last_password_change">Last password change</string>
    <string name="last_save_app">Last saved app</string>
    <string name="last_save_by">Last saved by</string>
    <string name="last_save_time">Last save time</string>
    <string name="legacy_file_chooser">Legacy file chooser</string>
    <string name="legacy_file_chooser_summary">Usable with Kitkat and higher</string>
    <string name="length">Length</string>
    <string name="length_even_hex">Length must be even for hexadecimal</string>
    <string name="length_min_val">Length must be at least %1$d</string>
    <string name="length_max_val">Length must be at most %1$d</string>
    <string name="loading_file">Loading %s…</string>
...
    <string name="sync">Sync</string>
    <string name="sync_account_deleted">Sync account deleted.  Use the menu to choose another option.</string>
    <string name="theme">Theme</string>
    <string name="time_start">Time Start</string>
    <string name="time_step">Time Step</string>
    <string name="times_header">TIMES</string>
    <string name="title">Title</string>
    <string name="touch_sensor_to_save_the_password">Touch sensor to save the password</string>
    <string name="touch_sensor_to_load_saved_password">Touch sensor to load saved password</string>
    <string name="toggle_passwords">Toggle Passwords</string>
    <string name="unknown_hash_algorithm" tools:ignore="MissingTranslation">Unknown hash algorithm</string>
    <string name="unknown_sync_file">Unknown sync file</string>
    <string name="unprotect_all">Unprotect All Records</string>
...
