<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (©) 2015 Jeff Harris <jefftharris@gmail.com>
  ~ All rights reserved. Use of the code is allowed under the
  ~ Artistic License 2.0 terms, as specified in the LICENSE file
  ~ distributed with this code, or available from
  ~ http://www.opensource.org/licenses/artistic-license-2.0.php
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_drawer_files"
            android:icon="@drawable/ic_passwdsafe_dark"
            android:orderInCategory="0"
            android:title="@string/files" />

        <item
            android:id="@+id/menu_drawer_backup_files"
            android:icon="@drawable/ic_action_backup_dark"
            android:orderInCategory="100"
            android:title="@string/file_backups" />

        <item
            android:id="@+id/menu_drawer_preferences"
            android:icon="@drawable/ic_action_settings_dark"
            android:orderInCategory="101"
            android:title="@string/preferences" />

        <item
            android:id="@+id/menu_drawer_about"
            android:icon="@drawable/ic_action_info_dark"
            android:orderInCategory="102"
            android:title="@string/about" />
    </group>
</menu>
