<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".PasswdSafeListFragment">

    <LinearLayout android:id="@+id/current_group_panel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="?attr/selectableItemBackground"
                  android:clickable="true"
                  android:focusable="true"
                  android:orientation="vertical">

        <TextView android:id="@+id/current_group_label"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:drawablePadding="8dp"
                  android:gravity="center_vertical"
                  android:minHeight="?android:attr/listPreferredItemHeight"
                  android:text="@string/group"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  app:drawableLeftCompat="?attr/drawableFolderUp"
                  app:drawableStartCompat="?attr/drawableFolderUp" />

        <View style="@style/Separator.Accent"/>

     </LinearLayout>

    <ListView android:id="@android:id/list"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:choiceMode="singleChoice"
              android:fastScrollAlwaysVisible="false"
              android:fastScrollEnabled="true"/>

    <TextView android:id="@android:id/empty"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:textAppearance="?android:attr/textAppearanceLarge"/>

</LinearLayout>
